# squad

./: .gitignore  README.md  pyproject.toml
squad/: __main__.py  data.py  metrics.py  model.py
tests/: test_model.py
webapp/: back.py  front.py  models.py
