[tool.poetry]
name = "squad"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8"
fire = "^0.4.0"
tensorflow = "^2.8.0"
transformers = "^4.16.2"
sentencepiece = "^0.1.96"
optuna = "^2.10.0"
tqdm = "^4.62.3"
streamlit = "^1.5.1"
fastapi = "^0.74.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fire = 'squad.__main__:main'
